--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "backend",
+  "name": "digital-death-locker-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend for Digital Death Locker - A digital legacy manager",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": [],
+  "keywords": ["digital-legacy", "mern", "backend"],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "mongoose": "^8.19.4"
-  },
+    "nodemailer": "^6.9.7",
+    "crypto": "^1.0.1"
+  }
+  ,
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^2.0.22"
   }
 }
