--- a/backend/package.json
+++ b/backend/package.json
@@ -7,21 +7,24 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["digital-legacy", "mern", "backend"],
+  "keywords": [
+    "digital-legacy",
+    "mern",
+    "backend"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "nodemailer": "^6.9.7",
-    "crypto": "^1.0.1"
-  }
-  ,
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "nodemailer": "^7.0.11"
+  },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.1.11"
   }
 }
